fix dark mode and mobile width

--- a/src/app.css
+++ b/src/app.css
@@ -16,7 +16,6 @@
 
 a {
   font-weight: 500;
-  color: black;
   text-decoration: none;
 }
 a:hover {
@@ -31,8 +30,8 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 2em;
+  line-height: 0.5;
 }
 
 .card {
@@ -41,7 +40,7 @@ h1 {
 
 #app {
   max-width: 100vw;
-  min-width: 500px;
+  min-width: 20vw;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -79,3 +78,7 @@ button:focus-visible {
   }
 }
 
+.flex-horiz {
+  display: flex;
+  flex-direction: row;
+}
